- minor project changes